@@ -1,5 +1,10 @@
 1999-10-23  Kenichi OKADA <okada@opaopa.org>
 
+	* sha1.el (sha1-encode): Fix and define as obsolete function.
+	(sha1-encode-binary): Ditto.
+
+1999-10-23  Kenichi OKADA <okada@opaopa.org>
+
 	* sha1.el (sha1-encode): New alias.
 	(sha1-encode-binary): Ditto.
 
